[tool.poetry]
name = "IsoChroma"
version = "0.1"
description = ""
authors = ["Rokkano"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.3"
numpy = "<2.3.5"
matplotlib = "^3.10.7"
jupyter = "^1.1.1"
ipykernel = "^7.1.0"

# ------------------------ DEV ------------------------ #
[tool.poetry.group.dev.dependencies]
ruff = "0.9.6"
bandit = {extras = ["toml"], version = "^1.8.2"}
pyright = "^1.1.394"
pre-commit = "^4.1.0"

# ------------------------ RUFF ----------------------- #
# See https://docs.astral.sh/ruff/configuration/ for more info

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "I", # Isort
    "D", # pydocstyle Google
]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__`
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

# ----------------------- BANDIT ---------------------- #
# See https://bandit.readthedocs.io/en/1.8.2/config.html for more info
[tool.bandit]
exclude = [ "tests/" ]

# -------------------- BUILD SYSTEM ------------------- #
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"